# sacd-rs

./: .gitattributes  CHANGELOG.md  Cargo.toml  README.md  build.rs
.github/workflows/: release.yml
src/: lib.rs  main.rs  sacd_iso_reader.rs  sacd_net_reader.rs  sacd_reader.rs
src/dst_decoder/: decoder.rs
src/dst_decoder/test_fixtures/mch/: frame_001.dsd  frame_001.dst  frame_002.dsd  frame_002.dst  frame_003.dsd  frame_003.dst
src/dst_decoder/test_fixtures/stereo/: frame_001.dsd  frame_001.dst  frame_002.dsd  frame_002.dst  frame_003.dsd  frame_003.dst
src/protos/: sacd_ripper.proto
src/sacd_reader/: iso_reader.rs  mod.rs  net_reader.rs
src/scarletbook/: area_toc.rs  audio.rs  consts.rs  dsf.rs  dst_decoder.rs  extractor.rs  id3.rs  master_toc.rs  mod.rs  reader.rs  types.rs
tests/: reference_extraction_test.rs
tests/fixtures/: reference_track01.dsf
tests/fixtures/dst_frames/: frame_000.dst  frame_001.dst  frame_002.dst  frame_003.dst  frame_004.dst  frame_005.dst  frame_006.dst  frame_007.dst  frame_008.dst  frame_009.dst  frame_010.dst  frame_011.dst  frame_012.dst  frame_013.dst  frame_014.dst  frame_015.dst  frame_016.dst  frame_017.dst  frame_018.dst  frame_019.dst  frame_020.dst  frame_021.dst  frame_022.dst  frame_023.dst  frame_024.dst  frame_025.dst  frame_026.dst  frame_027.dst  frame_028.dst  frame_029.dst  meta.txt
