[package]
name = "sacd-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
byteorder = "1.5.0"
chrono = "0.4"
clap = { version = "4.5.54", features = ["derive"] }
env_logger = "0.11.8"
indicatif = "0.17"
log = "0.4.29"
prost = "0.14.3"

[build-dependencies]
chrono = "0.4"
prost-build = "0.14.3"

[dev-dependencies]
tempfile = "3.25.0"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
