[package]
name = "sacd-rs"
version = "0.1.0"
edition = "2024"
description = "SACD ripper client. Designed to be used with a jailbroken SACD player, such as specific models of PS3s or some Sony Bluray players, which can support running a server to stream raw SACD image data over the network to a client."
license = "Apache-2.0"
repository = "https://github.com/bleggett/sacd-rs"
exclude = [
    "tests/*",
]

[dependencies]
anyhow = "1.0.100"
byteorder = "1.5.0"
chrono = "0.4"
clap = { version = "4.5.54", features = ["derive"] }
dst-decoder = "0.1.1"
env_logger = "0.11.8"
indicatif = "0.18"
log = "0.4.29"
prost = "0.14.3"
rayon = "1.12"

[build-dependencies]
chrono = "0.4"
prost-build = "0.14.3"

[dev-dependencies]
tempfile = "3.25.0"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
